--- a/style.css
+++ b/style.css
@@ -71,8 +71,8 @@ section {
   flex-grow: 1;
   background-color: transparent;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  min-height: 450px;
-  height: 55vh;
+  min-height: 200px;
+  height: calc(1160px / 3);
   position: relative;
 }
 
