--- a/style.css
+++ b/style.css
@@ -60,6 +60,12 @@ section {
   letter-spacing: 0;
 }
 
+h2+p {
+  font-size: 20px;
+  letter-spacing: 0.1em;
+  line-height: 30px;
+}
+
 .cards-container {
   display: flex;
   justify-content: center;
