--- a/style.css
+++ b/style.css
@@ -115,6 +115,34 @@ h2+p {
   color: #b8a054;
 }
 
+
+.prev-button,
+.next-button {
+  position: absolute;
+  top: 50%;
+  transform: translate(0px, -50%);
+  background: transparent;
+  border: 0;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.prev-button svg,
+.next-button svg {
+  width: 100%;
+  height: 100%;
+}
+
+.prev-button {
+  left: -40px;
+}
+
+.next-button {
+  right: -40px;
+}
+
 /* Third and Fourth Sections */
 .text-and-grid-section {
   padding: 80px 20px;
@@ -248,6 +276,18 @@ section.final-section a {
 @media (max-width: 700px) {
   section.final-section img {
     max-width: 70%;
+  }
+
+  .cards-container {
+    width: 80%;
+  }
+
+  .prev-button {
+    left: -10px;
+  }
+
+  .next-button {
+    right: -10px;
   }
 
   section.final-section a {
